--- a/WSTA_Project.ipynb
+++ b/WSTA_Project.ipynb
@@ -53,7 +53,36 @@
     "\n",
     "stopwords = set(nltk.corpus.stopwords.words('english')) # wrap in a set() (see below)\n",
     "stemmer = nltk.stem.PorterStemmer() \n",
-    "sent_segmenter = nltk.data.load('tokenizers/punkt/english.pickle')"
+    "sent_segmenter = nltk.data.load('tokenizers/punkt/english.pickle')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "lemmatizer = nltk.stem.wordnet.WordNetLemmatizer() "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def lemmatize_word(word):\n",
+    "    word = word.lower()\n",
+    "    lemma_n = lemmatizer.lemmatize(word,'n')\n",
+    "    lemma_v = lemmatizer.lemmatize(word,'v')\n",
+    "    if len(lemma_n) <= len(lemma_v):\n",
+    "        return lemma_n\n",
+    "    else:\n",
+    "        return lemma_v"
    ]
   },
   {
@@ -84,6 +113,12 @@
     "                text = doc['text']\n",
     "    return text\n",
     "\n",
+    "# def extract_query_terms(query, q_type):\n",
+    "#     q_terms = extract_terms(query)\n",
+    "#     # Since HOW queries have many answer types, furthrer analysis required\n",
+    "#     if q_type == 'HOW':\n",
+    "        \n",
+    "\n",
     "def parse_paragraphs(text):\n",
     "    identifier = 0\n",
     "    for para in text:\n",
@@ -94,14 +129,14 @@
     "    terms = set()\n",
     "    for token in nltk.word_tokenize(para):\n",
     "        if token not in stopwords: # 'in' and 'not in' opera]tions are much faster over sets that lists\n",
-    "            terms.add(stemmer.stem(token.lower()))\n",
+    "            terms.add(lemmatize_word(token))\n",
     "    return terms\n",
     "\n",
     "def extract_term_freqs(para):\n",
     "    tfs = Counter()\n",
     "    for token in para:\n",
     "        if token not in stopwords: # 'in' and 'not in' operations are much faster over sets that lists\n",
-    "            tfs[stemmer.stem(token.lower())] += 1\n",
+    "            tfs[lemmatize_word(token)] += 1\n",
     "    return tfs\n",
     "\n",
     "def compute_para_freqs(para_term_freqs):\n",
@@ -170,7 +205,9 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -191,7 +228,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": []
