--- a/WSTA_Project.ipynb
+++ b/WSTA_Project.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -50,15 +50,21 @@
     "from collections import defaultdict, Counter\n",
     "import requests, tarfile\n",
     "import json\n",
+    "import string\n",
+    "\n",
+    "# More will be added\n",
+    "HOW_SUBCLASS = {'many': [[], ['CD']]}\n",
+    "\n",
+    "QUERY_CLASS = {'who': [['PERSON', 'ORGANIZATION'], ['NNP']], 'when': [['PERSON', 'ORGANIZATION'], ['NNP']]}\n",
     "\n",
     "stopwords = set(nltk.corpus.stopwords.words('english')) # wrap in a set() (see below)\n",
     "stemmer = nltk.stem.PorterStemmer() \n",
-    "sent_segmenter = nltk.data.load('tokenizers/punkt/english.pickle')\n"
+    "sent_segmenter = nltk.data.load('tokenizers/punkt/english.pickle')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -69,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -97,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -113,11 +119,38 @@
     "                text = doc['text']\n",
     "    return text\n",
     "\n",
-    "# def extract_query_terms(query, q_type):\n",
-    "#     q_terms = extract_terms(query)\n",
-    "#     # Since HOW queries have many answer types, furthrer analysis required\n",
-    "#     if q_type == 'HOW':\n",
+    "def extract_query(query):\n",
+    "    tokenized = nltk.word_tokenize(query)\n",
+    "    \n",
+    "    q_type = None\n",
+    "    \n",
+    "    if 'Who' in tokenized or 'who' in tokenized:\n",
+    "        q_type = QUERY_CLASS['who']\n",
+    "    elif 'When' in tokenized or 'when' in tokenized:\n",
+    "        q_type = QUERY_CLASS['when']\n",
+    "    elif 'How' in tokenized or 'how' in tokenized:\n",
     "        \n",
+    "        # Since HOW queries have many answer types, furthrer analysis required\n",
+    "\n",
+    "        how_index = 0\n",
+    "        \n",
+    "        if 'How' in tokenized:\n",
+    "            how_index = tokenized.index('How')\n",
+    "        else:\n",
+    "            how_index = tokenized.index('how')\n",
+    "            \n",
+    "        how_sub = tokenized[how_index + 1]\n",
+    "        \n",
+    "        tokenized.pop(how_index + 1)\n",
+    "        \n",
+    "        if how_sub in HOW_SUBCLASS.values:\n",
+    "            q_type = HOW_SUBCLASS[how_sub]\n",
+    "        \n",
+    "    terms = []\n",
+    "    for token in tokenized:\n",
+    "        if token not in stopwords and token not in string.punctuation: \n",
+    "            terms.append(lemmatize_word(token))\n",
+    "    return terms, q_type   \n",
     "\n",
     "def parse_paragraphs(text):\n",
     "    identifier = 0\n",
@@ -125,16 +158,9 @@
     "        yield (identifier, para)\n",
     "        identifier += 1\n",
     "\n",
-    "def extract_terms(para):\n",
-    "    terms = set()\n",
-    "    for token in nltk.word_tokenize(para):\n",
-    "        if token not in stopwords: # 'in' and 'not in' opera]tions are much faster over sets that lists\n",
-    "            terms.add(lemmatize_word(token))\n",
-    "    return terms\n",
-    "\n",
     "def extract_term_freqs(para):\n",
     "    tfs = Counter()\n",
-    "    for token in para:\n",
+    "    for token in nltk.word_tokenize(para):\n",
     "        if token not in stopwords: # 'in' and 'not in' operations are much faster over sets that lists\n",
     "            tfs[lemmatize_word(token)] += 1\n",
     "    return tfs\n",
@@ -193,17 +219,22 @@
     "\n",
     "docfname = 'project_files/documents.json'\n",
     "text = select_document(docfname, 0)\n",
+    "\n",
+    "# Divide document into paragraphs\n",
     "raw_paras = list(parse_paragraphs(text))\n",
     "\n",
     "paras, para_term_freqs, M = get_freq_dict(raw_paras)\n",
     "para_freqs = compute_para_freqs(para_term_freqs)\n",
-    "results = query_vsm([stemmer.stem(term.lower()) for term in \"constant element particle\".split()], \n",
-    "                    get_index(para_term_freqs, para_freqs, M))"
+    "\n",
+    "q_terms, q_type = extract_query(\"constant element particle\")\n",
+    "\n",
+    "results = query_vsm(q_terms, get_index(para_term_freqs, para_freqs, M))\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -214,14 +245,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[(0, 0.41096876688059836), (2, 0.15006844133204789)]\n",
-      "(0, u'First recognized in 1900 by Max Planck, it was originally the proportionality constant between the minimal increment of energy, E, of a hypothetical electrically charged oscillator in a cavity that contained black body radiation, and the frequency, f, of its associated electromagnetic wave. In 1905 the value E, the minimal energy increment of a hypothetical oscillator, was theoretically associated by Einstein with a \"quantum\" or minimal element of the energy of the electromagnetic wave itself. The light quantum behaved in some respects as an electrically neutral particle, as opposed to an electromagnetic wave. It was eventually called the photon.')\n"
+      "[(0, 0.39338189856512357), (2, 0.14518522331653647)]\n",
+      "(0, u'First recognized in 1900 by Max Planck, it was originally the proportionality constant between the minimal increment of energy, E, of a hypothetical electrically charged oscillator in a cavity that contained black body radiation, and the frequency, f, of its associated electromagnetic wave. In 1905 the value E, the minimal energy increment of a hypothetical oscillator, was theoretically associated by Einstein with a \"quantum\" or minimal element of the energy of the electromagnetic wave itself. The light quantum behaved in some respects as an electrically neutral particle, as opposed to an electromagnetic wave. It was eventually called the photon.')\n",
+      "First recognized in 1900 by Max Planck, it was originally the proportionality constant between the minimal increment of energy, E, of a hypothetical electrically charged oscillator in a cavity that contained black body radiation, and the frequency, f, of its associated electromagnetic wave. In 1905 the value E, the minimal energy increment of a hypothetical oscillator, was theoretically associated by Einstein with a \"quantum\" or minimal element of the energy of the electromagnetic wave itself. The light quantum behaved in some respects as an electrically neutral particle, as opposed to an electromagnetic wave. It was eventually called the photon.\n"
      ]
     }
    ],
    "source": [
     "print results\n",
-    "print(raw_paras[results[0][0]])"
+    "print(raw_paras[results[0][0]])\n",
+    "print(raw_paras[results[0][0]][1])"
    ]
   },
   {
