--- a/WSTA_Project.ipynb
+++ b/WSTA_Project.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -50,34 +50,27 @@
     "from collections import defaultdict, Counter\n",
     "import requests, tarfile\n",
     "import json\n",
-    "import string\n",
     "\n",
     "# More will be added\n",
     "HOW_SUBCLASS = {'many': [[], ['CD']]}\n",
     "\n",
-    "QUERY_CLASS = {'who': [['PERSON', 'ORGANIZATION'], ['NNP']], 'when': [['PERSON', 'ORGANIZATION'], ['NNP']]}\n",
+    "QUERY_CLASS = {'who': [['PERSON', 'ORGANIZATION'], ['NNP']], \n",
+    "               'when': [['PERSON', 'ORGANIZATION'], ['NNP']]}\n",
+    "\n",
     "\n",
     "stopwords = set(nltk.corpus.stopwords.words('english')) # wrap in a set() (see below)\n",
     "stemmer = nltk.stem.PorterStemmer() \n",
-    "sent_segmenter = nltk.data.load('tokenizers/punkt/english.pickle')"
+    "lemmatizer = nltk.stem.wordnet.WordNetLemmatizer() \n",
+    "sent_segmenter = nltk.data.load('tokenizers/punkt/english.pickle')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "lemmatizer = nltk.stem.wordnet.WordNetLemmatizer() "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -92,6 +85,51 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "global name 'query' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-11-35e2fea6c4e9>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     15\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mcounter\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0mlength\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m \u001b[0mdevelfname\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'project_files/devel.json'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 17\u001b[0;31m \u001b[0macc\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpara_accuracy\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdevelfname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     18\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-11-35e2fea6c4e9>\u001b[0m in \u001b[0;36mpara_accuracy\u001b[0;34m(fname)\u001b[0m\n\u001b[1;32m     10\u001b[0m             \u001b[0mdocid\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdic\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'docid'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 12\u001b[0;31m             \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mget_result\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdocid\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mquery\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     13\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mresult\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0mpara\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m                 \u001b[0mcounter\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: global name 'query' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "def para_accuracy(fname):\n",
+    "    counter = float(0)\n",
+    "    with open(fname) as json_data:\n",
+    "        infile = json.load(json_data)\n",
+    "        length = len(infile)\n",
+    "        for dic in infile:\n",
+    "            question = dic['question']\n",
+    "            ans = dic['text']\n",
+    "            para = dic['answer_paragraph']\n",
+    "            docid = dic['docid']\n",
+    "            \n",
+    "            query, q_type = extract_query(question)\n",
+    "            \n",
+    "            result = get_result(docid, query)\n",
+    "            if result == para:\n",
+    "                counter += 1\n",
+    "    return counter/length\n",
+    "develfname = 'project_files/devel.json'\n",
+    "acc = para_accuracy(develfname)\n",
+    "    "
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "deletable": true,
@@ -103,22 +141,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
-    "def select_document(fname, docid):\n",
-    "    with open(fname) as json_data:\n",
-    "        infile = json.load(json_data)\n",
-    "        for doc in infile:\n",
-    "            if doc['docid'] == docid:\n",
-    "                text = doc['text']\n",
-    "    return text\n",
-    "\n",
     "def extract_query(query):\n",
     "    tokenized = nltk.word_tokenize(query)\n",
     "    \n",
@@ -141,22 +169,53 @@
     "            \n",
     "        how_sub = tokenized[how_index + 1]\n",
     "        \n",
-    "        tokenized.pop(how_index + 1)\n",
-    "        \n",
     "        if how_sub in HOW_SUBCLASS.values:\n",
+    "            tokenized.pop(how_index + 1)\n",
     "            q_type = HOW_SUBCLASS[how_sub]\n",
     "        \n",
     "    terms = []\n",
     "    for token in tokenized:\n",
     "        if token not in stopwords and token not in string.punctuation: \n",
     "            terms.append(lemmatize_word(token))\n",
-    "    return terms, q_type   \n",
+    "    return terms, q_type "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "def select_document(fname, docid):\n",
+    "    with open(fname) as json_data:\n",
+    "        infile = json.load(json_data)\n",
+    "        for doc in infile:\n",
+    "            if doc['docid'] == docid:\n",
+    "                text = doc['text']\n",
+    "    return text\n",
+    "\n",
+    "# def extract_query_terms(query, q_type):\n",
+    "#     q_terms = extract_terms(query)\n",
+    "#     # Since HOW queries have many answer types, furthrer analysis required\n",
+    "#     if q_type == 'HOW':\n",
+    "        \n",
     "\n",
     "def parse_paragraphs(text):\n",
     "    identifier = 0\n",
     "    for para in text:\n",
     "        yield (identifier, para)\n",
     "        identifier += 1\n",
+    "\n",
+    "# def extract_terms(para):\n",
+    "#     terms = set()\n",
+    "#     for token in nltk.word_tokenize(para):\n",
+    "#         if token not in stopwords: # 'in' and 'not in' opera]tions are much faster over sets that lists\n",
+    "#             terms.add(lemmatize_word(token))\n",
+    "#     return terms\n",
     "\n",
     "def extract_term_freqs(para):\n",
     "    tfs = Counter()\n",
@@ -205,36 +264,56 @@
     "    return accumulator.most_common(k)\n",
     "\n",
     "def get_freq_dict(raw_paras):\n",
-    "    paras = {}\n",
-    "    for pid, p in raw_paras:\n",
-    "        terms = extract_terms(p)\n",
-    "        paras[pid] = terms\n",
+    "#     paras = {}\n",
+    "#     for pid, p in raw_paras:\n",
+    "#         terms = extract_terms(p)\n",
+    "#         paras[pid] = terms\n",
     "\n",
     "    para_term_freqs = {}\n",
-    "    for pid, terms in paras.items():\n",
-    "        term_freqs = extract_term_freqs(terms)\n",
+    "    for pid, para in raw_paras:\n",
+    "        term_freqs = extract_term_freqs(para)\n",
     "        para_term_freqs[pid] = term_freqs\n",
     "    M = len(para_term_freqs)\n",
-    "    return paras, para_term_freqs, M\n",
+    "    return para_term_freqs, M\n",
     "\n",
-    "docfname = 'project_files/documents.json'\n",
-    "text = select_document(docfname, 0)\n",
     "\n",
-    "# Divide document into paragraphs\n",
-    "raw_paras = list(parse_paragraphs(text))\n",
+    "# def get_result(docid, query):\n",
+    "#     docfname = 'project_files/documents.json'\n",
+    "#     text = select_document(docfname, docid)\n",
+    "#     raw_paras = list(parse_paragraphs(text))\n",
     "\n",
-    "paras, para_term_freqs, M = get_freq_dict(raw_paras)\n",
-    "para_freqs = compute_para_freqs(para_term_freqs)\n",
-    "\n",
-    "q_terms, q_type = extract_query(\"constant element particle\")\n",
-    "\n",
-    "results = query_vsm(q_terms, get_index(para_term_freqs, para_freqs, M))\n",
-    "\n"
+    "#     paras, para_term_freqs, M = get_freq_dict(raw_paras)\n",
+    "#     para_freqs = compute_para_freqs(para_term_freqs)\n",
+    "#     results = query_vsm([stemmer.stem(term.lower()) for term in \"constant element particle\".split()], \n",
+    "#                         get_index(para_term_freqs, para_freqs, M))\n",
+    "#     return results"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 63,
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "def get_result(docid, query):\n",
+    "    docfname = 'project_files/documents.json'\n",
+    "    text = select_document(docfname, docid)\n",
+    "    raw_paras = list(parse_paragraphs(text))\n",
+    "\n",
+    "    para_term_freqs, M = get_freq_dict(raw_paras)\n",
+    "    para_freqs = compute_para_freqs(para_term_freqs)\n",
+    "    results = query_vsm([stemmer.stem(term.lower()) for term in \"constant element particle\".split()], \n",
+    "                        get_index(para_term_freqs, para_freqs, M))\n",
+    "    return results, raw_paras"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -245,16 +324,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[(0, 0.39338189856512357), (2, 0.14518522331653647)]\n",
-      "(0, u'First recognized in 1900 by Max Planck, it was originally the proportionality constant between the minimal increment of energy, E, of a hypothetical electrically charged oscillator in a cavity that contained black body radiation, and the frequency, f, of its associated electromagnetic wave. In 1905 the value E, the minimal energy increment of a hypothetical oscillator, was theoretically associated by Einstein with a \"quantum\" or minimal element of the energy of the electromagnetic wave itself. The light quantum behaved in some respects as an electrically neutral particle, as opposed to an electromagnetic wave. It was eventually called the photon.')\n",
-      "First recognized in 1900 by Max Planck, it was originally the proportionality constant between the minimal increment of energy, E, of a hypothetical electrically charged oscillator in a cavity that contained black body radiation, and the frequency, f, of its associated electromagnetic wave. In 1905 the value E, the minimal energy increment of a hypothetical oscillator, was theoretically associated by Einstein with a \"quantum\" or minimal element of the energy of the electromagnetic wave itself. The light quantum behaved in some respects as an electrically neutral particle, as opposed to an electromagnetic wave. It was eventually called the photon.\n"
+      "[(0, 0.1541752855626096), (20, 0.08236155155447321)]\n",
+      "(0, u'First recognized in 1900 by Max Planck, it was originally the proportionality constant between the minimal increment of energy, E, of a hypothetical electrically charged oscillator in a cavity that contained black body radiation, and the frequency, f, of its associated electromagnetic wave. In 1905 the value E, the minimal energy increment of a hypothetical oscillator, was theoretically associated by Einstein with a \"quantum\" or minimal element of the energy of the electromagnetic wave itself. The light quantum behaved in some respects as an electrically neutral particle, as opposed to an electromagnetic wave. It was eventually called the photon.')\n"
      ]
     }
    ],
    "source": [
-    "print results\n",
-    "print(raw_paras[results[0][0]])\n",
-    "print(raw_paras[results[0][0]][1])"
+    "result, raw_paras = get_result(0, 'particle, element, constant')\n",
+    "# print raw_paras\n",
+    "print result\n",
+    "print(raw_paras[result[0][0]])"
    ]
   },
   {
