--- a/WSTA_Project.ipynb
+++ b/WSTA_Project.ipynb
@@ -46,11 +46,10 @@
    "outputs": [],
    "source": [
     "import nltk\n",
-    "import requests, tarfile\n",
     "import json, string\n",
     "from math import log\n",
     "from collections import defaultdict, Counter\n",
-    "\n",
+    "import csv\n",
     "\n",
     "stopwords = set(nltk.corpus.stopwords.words('english')) # wrap in a set() (see below)\n",
     "lemmatizer = nltk.stem.wordnet.WordNetLemmatizer() \n",
@@ -100,7 +99,9 @@
    "cell_type": "code",
    "execution_count": 52,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -151,7 +152,9 @@
    "cell_type": "code",
    "execution_count": 63,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -397,7 +400,9 @@
    "cell_type": "code",
    "execution_count": 61,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -6653,7 +6658,9 @@
    "cell_type": "code",
    "execution_count": 38,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -6731,7 +6738,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -6767,6 +6776,26 @@
    "execution_count": null,
    "metadata": {
     "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def output_result(final_ans):\n",
+    "    with open('names.csv', 'w') as csvfile:\n",
+    "        fieldnames = ['id', 'answer']\n",
+    "        writer = csv.DictWriter(csvfile, fieldnames=fieldnames)\n",
+    "        writer.writeheader()\n",
+    "        for each_dict in final_ans:\n",
+    "            writer.writerow({'id': each_dict['id'], 'answer': each_dict['answer']})\n",
+    "    csvfile.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -6812,7 +6841,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
